# inwxcli

./: .gitignore  README.md  flake.nix  pyproject.toml
inwxcli/: inwx.py  inwxcli.py
