[project]
name = "inwxcli"
version = "2.0.0"
description = "Command line interface for inwx.com"
authors = [
    {name = "Florian Kaiser", email = "florian.kaiser@fnkr.net"},
    {name = "Nico Bellack", email = "nico@bellack.dev"},
]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
inwxcli = "inwxcli.inwxcli:main"

[tool.poetry.group.notnixos.dependencies]
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
